# aadg-genomics-class

./: .gitignore  LALALA.txt  README.md  Untitled.ipynb  allsource.tex  better_lis.ipynb  classifier.py  dbgb.txt  ddd.py  discovery.json  discovery_full.json  evaluate.py  experiment_with_lis.ipynb  latest_output.txt  log.txt  loh  mapper.py  mas_output_cv10.tsv  mas_output_cv1x.tsv  mas_output_cv6.tsv  mas_output_cv8.tsv  mas_output_cv9.tsv  mas_testing_data.tsv  mas_training_data.tsv  mas_truth_full.tsv  matches.json  max_output_cv10.tsv  max_output_cv11.tsv  max_output_cv12.tsv  max_output_cv8l.tsv  max_testing_data.tsv  max_training_data.tsv  max_truth_full.tsv  memray-flamegraph-profile_cv6.html  metrics.txt  output.tsv  output.txt  output_cv5_wtf.tsv  output_full.tsv  output_p0.txt  (+22 more)
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  better_lis-checkpoint.ipynb  experiment_with_lis-checkpoint.ipynb
aadg_genomics_class/: aligner___.py  bwtold.py  bwtt.py  checker.py  classif_starting.ipynb  cli.py  click_utils.py  cv1.py  cv10.py  cv11.py  cv11m.py  cv12.py  cv12m.py  cv13.py  cv1discovery.py  cv1x.py  cv2.py  cv3.py  cv4.py  cv5.py  cv6.py  cv7.py  cv8.py  cv8l.py  cv9.py  discovery.ipynb  edit_check.py  faster_index_tests.ipynb  faster_index_tests.py  improved_bwt_align.ipynb  mapper.py  new_aligner.py  new_aligner2.py  new_aligner2np.py  new_aligner2ported.py  pipeline.py  plots.ipynb  sequences.py  stat.py  test.pgf  (+24 more)
aadg_genomics_class/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  classif_starting-checkpoint.ipynb  discovery-checkpoint.ipynb  improved_bwt_align-checkpoint.ipynb  plots-checkpoint.ipynb
aadg_genomics_class/aligner/: aligner.py  needleman_wunsch.py
aadg_genomics_class/bwaligner/: __init__.py  aligner.py  assembler.py  misc.py  structures.py
aadg_genomics_class/minimizer/: __init__.py  extender.py  minimizer.py  prefilter.py
aadg_genomics_class/monitoring/: logs.py  task_reporter.py
data/: example.fasta  example.ref  reads-1.fasta  reads0.fasta  reads0.out  reads1.fasta  reads2.txt  reference.fasta
data2/: KarkSand.py  reads0.txt  reads1.txt  reads2.fasta
presentation/: data1 copy.json  data1.json  robExt-prepare-for-arxiv.py  robExt-remove-old-figures.py  source-robExt-all-figures.txt  source-robExt-tmp-file-you-can-remove.tmp  source.aux  source.snm  source.tex  source.vrb  source_backup.tex
presentation/_minted-source/: 5533E54D705FBC1F82DE249A5EA78109B634A66B45A49A46578E491A48DA559C.pygtex  747048D921AD185C0155BE4EB3D0067BB634A66B45A49A46578E491A48DA559C.pygtex
presentation/robustExternalize/: robExt-010CB1EF9623028B5EB64242809025FF.deps  robExt-010CB1EF9623028B5EB64242809025FF.pgf  robExt-010CB1EF9623028B5EB64242809025FF.tex  robExt-04F57D2A47DB6CFE9072658ACF7223C6.deps  robExt-04F57D2A47DB6CFE9072658ACF7223C6.pgf  robExt-04F57D2A47DB6CFE9072658ACF7223C6.tex  robExt-1382DFB3F0F1D2B6D7AC18CB85CE3AB8.deps  robExt-1382DFB3F0F1D2B6D7AC18CB85CE3AB8.tex  robExt-14A62B47F284C4FA456262E826A0DE19.deps  robExt-14A62B47F284C4FA456262E826A0DE19.pgf  robExt-14A62B47F284C4FA456262E826A0DE19.tex  robExt-153C2C506C8E735BC1AFE9EADE9008A8.deps  robExt-153C2C506C8E735BC1AFE9EADE9008A8.pgf  robExt-153C2C506C8E735BC1AFE9EADE9008A8.tex  robExt-180EBA3ABD0B397402C34CDB2C112644.deps  robExt-180EBA3ABD0B397402C34CDB2C112644.pgf  robExt-180EBA3ABD0B397402C34CDB2C112644.tex  robExt-18700E11F27DCC7BAB1AC658BFBCCDD3.deps  robExt-18700E11F27DCC7BAB1AC658BFBCCDD3.pgf  robExt-18700E11F27DCC7BAB1AC658BFBCCDD3.tex  robExt-1B2F8A471BB4C55A022F2BE79B6BFC4C.deps  robExt-1B2F8A471BB4C55A022F2BE79B6BFC4C.pgf  robExt-1B2F8A471BB4C55A022F2BE79B6BFC4C.tex  robExt-1B4C3B6ABA5567156F092082D2C1FEDB.deps  robExt-1B4C3B6ABA5567156F092082D2C1FEDB.pgf  robExt-1B4C3B6ABA5567156F092082D2C1FEDB.tex  robExt-1EDC23E5872A42898F11C37A97278332.deps  robExt-1EDC23E5872A42898F11C37A97278332.pgf  robExt-1EDC23E5872A42898F11C37A97278332.tex  robExt-1EF5DAF040F042AE286BB03340476B85.deps  robExt-1EF5DAF040F042AE286BB03340476B85.pgf  robExt-1EF5DAF040F042AE286BB03340476B85.tex  robExt-20AB590B6DAD8143ADA25C57EBA28B43.deps  robExt-20AB590B6DAD8143ADA25C57EBA28B43.pgf  robExt-20AB590B6DAD8143ADA25C57EBA28B43.tex  robExt-23E097C47C103BFDFACB9CBFFF966624.deps  robExt-23E097C47C103BFDFACB9CBFFF966624.pgf  robExt-23E097C47C103BFDFACB9CBFFF966624.tex  robExt-28F8115786BD9548EC8B470442F46A9C.deps  robExt-28F8115786BD9548EC8B470442F46A9C.pgf  (+238 more)
presentation_clean/: CMakeLists.txt  configure.py  requirements.txt
presentation_clean/_testing/: configure.py
presentation_clean/src/: common.sty  common.tex  epilogue.tex  meta.yaml  preamble.tex
presentation_clean/src/aadg1/: experiments_data.json  main.bib  main.tex
presentation_clean/src/aadg2/: main.tex
presentation_clean/src/drafts/: external.yaml  main.tex
presentation_clean/src/ti_midterm/: main.tex
presentation_clean/src/ti_midterm_1/: main.tex
presentation_clean/src/ti_midterm_2/: main.tex
presentation_clean/src/ti_midterm_3/: main.tex
