[tool.poetry]
name = "aadg-genomics-class"
version = "0.1.0"
description = "Implementation of read mapping algorithm for the genomics classes @ MIMUW 2023"
authors = ["styczynski <piotr@styczynski.in>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
numpy = "^1.26.2"
biopython = "^1.81"
pydantic = "^2.5.2"
asciitree = "^0.3.3"
termcolor = "^2.4.0"
click = "^8.1.7"
psutil = "^6.1.0"
memray = "^1.14.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
